src/objects/Sandbox_Users__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Sandbox User Custom Settings.  This custom Setting is used to see which users should be enabled when the refresh of the sandbox is complete</description>
    <fields>
        <fullName>Alias__c</fullName>
        <description>Alias</description>
        <inlineHelpText>Alias</inlineHelpText>
        <label>Alias</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address of the user</description>
        <inlineHelpText>Email address of the user</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Encoding_Key__c</fullName>
        <label>Encoding Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tells if this user should be picked up for creation</description>
        <inlineHelpText>Tells if this user should be picked up for creation</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <description>License for creating the user</description>
        <inlineHelpText>License for creating the user</inlineHelpText>
        <label>License</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>Operation is one of these value CREATE or ENABLE.  All other users that are tagged not tagged as Create or Enable are disabled by default</description>
        <inlineHelpText>Operation is one of these value CREATE or ENABLE.  All other users that are tagged not tagged as Create or Enable are disabled by default</inlineHelpText>
        <label>Operation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sandbox Users</label>
</CustomObject>